--- a/index.html
+++ b/index.html
@@ -50,22 +50,22 @@
 <td class="col-md-3">1.08</td>
   
 
-<td class="col-md-4">3.90</td>
+<td class="col-md-4">3.93</td>
   
 
-<td class="col-md-5">2.56</td>
+<td class="col-md-5">2.61</td>
   
 
-<td class="col-md-6">1.56</td>
+<td class="col-md-6">1.61</td>
   
 
-<td class="col-md-7">1.15</td>
+<td class="col-md-7">1.23</td>
   
 
 <td class="col-md-8">2.67</td>
   
 
-<td class="col-md-9">0.67</td>
+<td class="col-md-9">1.00</td>
   
 s
 </tr>
@@ -85,16 +85,16 @@ s
 <td class="col-md-5">1.11</td>
   
 
-<td class="col-md-6">1.28</td>
+<td class="col-md-6">1.25</td>
   
 
-<td class="col-md-7">1.49</td>
+<td class="col-md-7">1.46</td>
   
 
-<td class="col-md-8">0.76</td>
+<td class="col-md-8">0.61</td>
   
 
-<td class="col-md-9">0.60</td>
+<td class="col-md-9">0.40</td>
   
 s
 </tr>
@@ -111,19 +111,48 @@ s
 <td class="col-md-4">4.15</td>
   
 
-<td class="col-md-5">1.44</td>
+<td class="col-md-5">1.35</td>
   
 
-<td class="col-md-6">2.76</td>
+<td class="col-md-6">2.67</td>
   
 
-<td class="col-md-7">3.46</td>
+<td class="col-md-7">3.67</td>
   
 
-<td class="col-md-8">0.70</td>
+<td class="col-md-8">0.54</td>
   
 
-<td class="col-md-9">0.40</td>
+<td class="col-md-9">0.67</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">4</td>
+    <td class="col-md-2">W</td>
+    
+<td class="col-md-3">1.26</td>
+  
+
+<td class="col-md-4">4.60</td>
+  
+
+<td class="col-md-5">1.10</td>
+  
+
+<td class="col-md-6">0.62</td>
+  
+
+<td class="col-md-7">0.76</td>
+  
+
+<td class="col-md-8">0.00</td>
+  
+
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
