--- a/index.html
+++ b/index.html
@@ -45,27 +45,27 @@
               
 <tr>
     <td class="col-md-1">1</td>
-    <td class="col-md-2">TWTR</td>
+    <td class="col-md-2">QQQ</td>
     
-<td class="col-md-3">1.20</td>
+<td class="col-md-3">2.14</td>
   
 
-<td class="col-md-4">4.32</td>
+<td class="col-md-4">6.52</td>
   
 
-<td class="col-md-5">1.43</td>
+<td class="col-md-5">1.08</td>
   
 
-<td class="col-md-6">2.95</td>
+<td class="col-md-6">1.28</td>
   
 
-<td class="col-md-7">3.77</td>
+<td class="col-md-7">1.23</td>
   
 
-<td class="col-md-8">1.06</td>
+<td class="col-md-8">1.08</td>
   
 
-<td class="col-md-9">1.67</td>
+<td class="col-md-9">0.67</td>
   
 s
 </tr>
