--- a/index.html
+++ b/index.html
@@ -45,27 +45,27 @@
               
 <tr>
     <td class="col-md-1">1</td>
-    <td class="col-md-2">GE</td>
+    <td class="col-md-2">TLRY</td>
     
-<td class="col-md-3">1.20</td>
+<td class="col-md-3">1.08</td>
   
 
-<td class="col-md-4">2.62</td>
+<td class="col-md-4">4.53</td>
   
 
-<td class="col-md-5">1.17</td>
+<td class="col-md-5">3.82</td>
   
 
-<td class="col-md-6">0.80</td>
+<td class="col-md-6">1.71</td>
   
 
-<td class="col-md-7">1.00</td>
+<td class="col-md-7">1.93</td>
   
 
-<td class="col-md-8">0.00</td>
+<td class="col-md-8">1.44</td>
   
 
-<td class="col-md-9">0.67</td>
+<td class="col-md-9">1.00</td>
   
 s
 </tr>
