--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">TLRY</td>
+    
+<td class="col-md-3">1.07</td>
+  
+
+<td class="col-md-4">4.60</td>
+  
+
+<td class="col-md-5">3.15</td>
+  
+
+<td class="col-md-6">2.15</td>
+  
+
+<td class="col-md-7">1.87</td>
+  
+
+<td class="col-md-8">1.22</td>
+  
+
+<td class="col-md-9">0.33</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
