--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">AMZN</td>
+    
+<td class="col-md-3">2.30</td>
+  
+
+<td class="col-md-4">1.91</td>
+  
+
+<td class="col-md-5">1.09</td>
+  
+
+<td class="col-md-6">1.12</td>
+  
+
+<td class="col-md-7">0.90</td>
+  
+
+<td class="col-md-8">1.20</td>
+  
+
+<td class="col-md-9">0.67</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
