--- a/index.html
+++ b/index.html
@@ -45,27 +45,27 @@
               
 <tr>
     <td class="col-md-1">1</td>
-    <td class="col-md-2">TLRY</td>
+    <td class="col-md-2">QQQ</td>
     
-<td class="col-md-3">1.01</td>
+<td class="col-md-3">2.18</td>
   
 
-<td class="col-md-4">4.97</td>
+<td class="col-md-4">7.57</td>
   
 
-<td class="col-md-5">2.36</td>
+<td class="col-md-5">1.01</td>
   
 
-<td class="col-md-6">2.47</td>
+<td class="col-md-6">1.36</td>
   
 
-<td class="col-md-7">1.76</td>
+<td class="col-md-7">0.86</td>
   
 
-<td class="col-md-8">1.11</td>
+<td class="col-md-8">1.00</td>
   
 
-<td class="col-md-9">0.33</td>
+<td class="col-md-9">1.00</td>
   
 s
 </tr>
