--- a/index.html
+++ b/index.html
@@ -62,10 +62,39 @@
 <td class="col-md-7">0.86</td>
   
 
+<td class="col-md-8">1.07</td>
+  
+
+<td class="col-md-9">0.40</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">AMZN</td>
+    
+<td class="col-md-3">2.27</td>
+  
+
+<td class="col-md-4">1.92</td>
+  
+
+<td class="col-md-5">1.13</td>
+  
+
+<td class="col-md-6">1.09</td>
+  
+
+<td class="col-md-7">0.88</td>
+  
+
 <td class="col-md-8">1.00</td>
   
 
-<td class="col-md-9">1.00</td>
+<td class="col-md-9">0.50</td>
   
 s
 </tr>
