--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">AMZN</td>
+    
+<td class="col-md-3">2.27</td>
+  
+
+<td class="col-md-4">1.94</td>
+  
+
+<td class="col-md-5">1.18</td>
+  
+
+<td class="col-md-6">1.10</td>
+  
+
+<td class="col-md-7">0.79</td>
+  
+
+<td class="col-md-8">0.80</td>
+  
+
+<td class="col-md-9">1.00</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
