--- a/index.html
+++ b/index.html
@@ -50,22 +50,51 @@
 <td class="col-md-3">2.14</td>
   
 
-<td class="col-md-4">2.58</td>
+<td class="col-md-4">2.57</td>
   
 
 <td class="col-md-5">1.16</td>
   
 
-<td class="col-md-6">1.56</td>
+<td class="col-md-6">1.51</td>
   
 
-<td class="col-md-7">1.56</td>
+<td class="col-md-7">1.52</td>
   
 
 <td class="col-md-8">0.76</td>
   
 
-<td class="col-md-9">1.83</td>
+<td class="col-md-9">0.75</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">SQ</td>
+    
+<td class="col-md-3">1.69</td>
+  
+
+<td class="col-md-4">11.71</td>
+  
+
+<td class="col-md-5">1.09</td>
+  
+
+<td class="col-md-6">1.44</td>
+  
+
+<td class="col-md-7">1.12</td>
+  
+
+<td class="col-md-8">0.00</td>
+  
+
+<td class="col-md-9">0.67</td>
   
 s
 </tr>
