--- a/index.html
+++ b/index.html
@@ -47,25 +47,54 @@
     <td class="col-md-1">1</td>
     <td class="col-md-2">TSLA</td>
     
-<td class="col-md-3">2.13</td>
+<td class="col-md-3">2.12</td>
   
 
 <td class="col-md-4">2.66</td>
   
 
-<td class="col-md-5">1.31</td>
+<td class="col-md-5">1.33</td>
   
 
-<td class="col-md-6">1.54</td>
+<td class="col-md-6">1.52</td>
   
 
-<td class="col-md-7">1.11</td>
+<td class="col-md-7">1.13</td>
   
 
-<td class="col-md-8">0.76</td>
+<td class="col-md-8">0.86</td>
   
 
-<td class="col-md-9">1.80</td>
+<td class="col-md-9">2.20</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">AMZN</td>
+    
+<td class="col-md-3">2.21</td>
+  
+
+<td class="col-md-4">2.03</td>
+  
+
+<td class="col-md-5">1.12</td>
+  
+
+<td class="col-md-6">0.75</td>
+  
+
+<td class="col-md-7">0.79</td>
+  
+
+<td class="col-md-8">0.36</td>
+  
+
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
