--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@
 <td class="col-md-4">2.70</td>
   
 
-<td class="col-md-5">1.45</td>
+<td class="col-md-5">1.46</td>
   
 
-<td class="col-md-6">1.49</td>
+<td class="col-md-6">1.51</td>
   
 
-<td class="col-md-7">0.95</td>
+<td class="col-md-7">0.92</td>
   
 
-<td class="col-md-8">1.32</td>
+<td class="col-md-8">1.60</td>
   
 
-<td class="col-md-9">0.67</td>
+<td class="col-md-9">1.33</td>
   
 s
 </tr>
@@ -79,22 +79,22 @@ s
 <td class="col-md-3">2.19</td>
   
 
-<td class="col-md-4">8.70</td>
+<td class="col-md-4">8.74</td>
   
 
 <td class="col-md-5">1.07</td>
   
 
-<td class="col-md-6">0.75</td>
+<td class="col-md-6">0.76</td>
   
 
-<td class="col-md-7">0.70</td>
+<td class="col-md-7">0.77</td>
   
 
-<td class="col-md-8">1.29</td>
+<td class="col-md-8">1.00</td>
   
 
-<td class="col-md-9">0.25</td>
+<td class="col-md-9">1.00</td>
   
 s
 </tr>
@@ -103,27 +103,27 @@ s
 
 <tr>
     <td class="col-md-1">3</td>
-    <td class="col-md-2">TLRY</td>
+    <td class="col-md-2">AMZN</td>
     
-<td class="col-md-3">0.98</td>
+<td class="col-md-3">2.19</td>
   
 
-<td class="col-md-4">5.97</td>
+<td class="col-md-4">2.02</td>
   
 
-<td class="col-md-5">2.36</td>
+<td class="col-md-5">1.08</td>
   
 
-<td class="col-md-6">0.86</td>
+<td class="col-md-6">0.78</td>
   
 
-<td class="col-md-7">0.64</td>
+<td class="col-md-7">0.71</td>
   
 
-<td class="col-md-8">0.00</td>
+<td class="col-md-8">0.67</td>
   
 
-<td class="col-md-9">0.33</td>
+<td class="col-md-9">0.67</td>
   
 s
 </tr>
