--- a/index.html
+++ b/index.html
@@ -45,27 +45,27 @@
               
 <tr>
     <td class="col-md-1">1</td>
-    <td class="col-md-2">AMZN</td>
+    <td class="col-md-2">QQQ</td>
     
 <td class="col-md-3">2.20</td>
   
 
-<td class="col-md-4">2.07</td>
+<td class="col-md-4">8.75</td>
   
 
-<td class="col-md-5">1.18</td>
+<td class="col-md-5">1.13</td>
   
 
-<td class="col-md-6">0.90</td>
+<td class="col-md-6">0.68</td>
   
 
-<td class="col-md-7">1.12</td>
+<td class="col-md-7">0.76</td>
   
 
-<td class="col-md-8">3.60</td>
+<td class="col-md-8">1.43</td>
   
 
-<td class="col-md-9">4.67</td>
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
@@ -79,22 +79,22 @@ s
 <td class="col-md-3">2.11</td>
   
 
-<td class="col-md-4">2.71</td>
+<td class="col-md-4">2.72</td>
   
 
 <td class="col-md-5">1.50</td>
   
 
-<td class="col-md-6">1.47</td>
+<td class="col-md-6">1.51</td>
   
 
-<td class="col-md-7">0.92</td>
+<td class="col-md-7">0.88</td>
   
 
-<td class="col-md-8">1.11</td>
+<td class="col-md-8">1.08</td>
   
 
-<td class="col-md-9">1.17</td>
+<td class="col-md-9">0.78</td>
   
 s
 </tr>
