--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
 <td class="col-md-5">1.19</td>
   
 
-<td class="col-md-6">0.86</td>
+<td class="col-md-6">0.87</td>
   
 
 <td class="col-md-7">1.12</td>
   
 
-<td class="col-md-8">3.80</td>
+<td class="col-md-8">4.75</td>
   
 
-<td class="col-md-9">0.15</td>
+<td class="col-md-9">0.08</td>
   
 s
 </tr>
@@ -74,27 +74,56 @@ s
 
 <tr>
     <td class="col-md-1">2</td>
+    <td class="col-md-2">QQQ</td>
+    
+<td class="col-md-3">2.19</td>
+  
+
+<td class="col-md-4">8.77</td>
+  
+
+<td class="col-md-5">1.11</td>
+  
+
+<td class="col-md-6">0.66</td>
+  
+
+<td class="col-md-7">0.75</td>
+  
+
+<td class="col-md-8">1.43</td>
+  
+
+<td class="col-md-9">0.33</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">3</td>
     <td class="col-md-2">TSLA</td>
     
-<td class="col-md-3">2.12</td>
+<td class="col-md-3">2.11</td>
   
 
-<td class="col-md-4">2.73</td>
+<td class="col-md-4">2.72</td>
   
 
-<td class="col-md-5">1.54</td>
+<td class="col-md-5">1.55</td>
   
 
-<td class="col-md-6">1.53</td>
+<td class="col-md-6">1.52</td>
   
 
-<td class="col-md-7">0.85</td>
+<td class="col-md-7">0.87</td>
   
 
-<td class="col-md-8">1.13</td>
+<td class="col-md-8">1.12</td>
   
 
-<td class="col-md-9">1.38</td>
+<td class="col-md-9">1.57</td>
   
 s
 </tr>
