--- a/index.html
+++ b/index.html
@@ -50,22 +50,22 @@
 <td class="col-md-3">2.10</td>
   
 
-<td class="col-md-4">2.76</td>
+<td class="col-md-4">2.77</td>
   
 
-<td class="col-md-5">1.59</td>
+<td class="col-md-5">1.61</td>
   
 
-<td class="col-md-6">1.47</td>
+<td class="col-md-6">1.48</td>
   
 
-<td class="col-md-7">0.85</td>
+<td class="col-md-7">0.87</td>
   
 
-<td class="col-md-8">1.00</td>
+<td class="col-md-8">1.07</td>
   
 
-<td class="col-md-9">1.00</td>
+<td class="col-md-9">1.38</td>
   
 s
 </tr>
@@ -74,27 +74,27 @@ s
 
 <tr>
     <td class="col-md-1">2</td>
-    <td class="col-md-2">AMZN</td>
+    <td class="col-md-2">NFLX</td>
     
-<td class="col-md-3">2.19</td>
+<td class="col-md-3">2.15</td>
   
 
-<td class="col-md-4">2.07</td>
+<td class="col-md-4">4.93</td>
   
 
-<td class="col-md-5">1.09</td>
+<td class="col-md-5">1.46</td>
   
 
-<td class="col-md-6">0.93</td>
+<td class="col-md-6">0.59</td>
   
 
-<td class="col-md-7">0.97</td>
+<td class="col-md-7">1.86</td>
   
 
-<td class="col-md-8">0.65</td>
+<td class="col-md-8">0.00</td>
   
 
-<td class="col-md-9">0.25</td>
+<td class="col-md-9">1.00</td>
   
 s
 </tr>
