--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <td class="col-md-5">1.07</td>
   
 
-<td class="col-md-6">0.63</td>
+<td class="col-md-6">0.64</td>
   
 
 <td class="col-md-7">0.91</td>
@@ -65,7 +65,7 @@
 <td class="col-md-8">1.20</td>
   
 
-<td class="col-md-9">0.43</td>
+<td class="col-md-9">0.29</td>
   
 s
 </tr>
@@ -74,27 +74,27 @@ s
 
 <tr>
     <td class="col-md-1">2</td>
-    <td class="col-md-2">TSLA</td>
+    <td class="col-md-2">AMZN</td>
     
-<td class="col-md-3">2.10</td>
+<td class="col-md-3">2.20</td>
   
 
-<td class="col-md-4">2.79</td>
+<td class="col-md-4">2.09</td>
   
 
-<td class="col-md-5">1.63</td>
+<td class="col-md-5">1.16</td>
   
 
-<td class="col-md-6">1.47</td>
+<td class="col-md-6">0.96</td>
   
 
-<td class="col-md-7">0.91</td>
+<td class="col-md-7">1.40</td>
   
 
-<td class="col-md-8">1.05</td>
+<td class="col-md-8">1.00</td>
   
 
-<td class="col-md-9">1.30</td>
+<td class="col-md-9">1.20</td>
   
 s
 </tr>
@@ -103,27 +103,27 @@ s
 
 <tr>
     <td class="col-md-1">3</td>
-    <td class="col-md-2">NFLX</td>
+    <td class="col-md-2">TSLA</td>
     
-<td class="col-md-3">2.15</td>
+<td class="col-md-3">2.10</td>
   
 
-<td class="col-md-4">4.93</td>
+<td class="col-md-4">2.79</td>
   
 
-<td class="col-md-5">1.22</td>
+<td class="col-md-5">1.62</td>
   
 
-<td class="col-md-6">0.67</td>
+<td class="col-md-6">1.44</td>
   
 
-<td class="col-md-7">1.22</td>
+<td class="col-md-7">0.94</td>
   
 
-<td class="col-md-8">0.00</td>
+<td class="col-md-8">0.98</td>
   
 
-<td class="col-md-9">0.33</td>
+<td class="col-md-9">1.10</td>
   
 s
 </tr>
