--- a/index.html
+++ b/index.html
@@ -45,27 +45,27 @@
               
 <tr>
     <td class="col-md-1">1</td>
-    <td class="col-md-2">TSLA</td>
+    <td class="col-md-2">QQQ</td>
     
-<td class="col-md-3">2.10</td>
+<td class="col-md-3">2.19</td>
   
 
-<td class="col-md-4">2.85</td>
+<td class="col-md-4">9.02</td>
   
 
-<td class="col-md-5">1.63</td>
+<td class="col-md-5">1.02</td>
   
 
-<td class="col-md-6">1.32</td>
+<td class="col-md-6">0.77</td>
   
 
-<td class="col-md-7">0.91</td>
+<td class="col-md-7">1.31</td>
   
 
-<td class="col-md-8">0.75</td>
+<td class="col-md-8">3.67</td>
   
 
-<td class="col-md-9">0.60</td>
+<td class="col-md-9">2.00</td>
   
 s
 </tr>
