--- a/index.html
+++ b/index.html
@@ -53,19 +53,77 @@
 <td class="col-md-4">9.02</td>
   
 
-<td class="col-md-5">1.02</td>
+<td class="col-md-5">1.01</td>
   
 
-<td class="col-md-6">0.77</td>
+<td class="col-md-6">0.78</td>
   
 
-<td class="col-md-7">1.31</td>
+<td class="col-md-7">1.23</td>
   
 
-<td class="col-md-8">3.67</td>
+<td class="col-md-8">3.00</td>
   
 
-<td class="col-md-9">2.00</td>
+<td class="col-md-9">0.80</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">AMZN</td>
+    
+<td class="col-md-3">2.22</td>
+  
+
+<td class="col-md-4">2.09</td>
+  
+
+<td class="col-md-5">1.25</td>
+  
+
+<td class="col-md-6">1.01</td>
+  
+
+<td class="col-md-7">1.75</td>
+  
+
+<td class="col-md-8">0.91</td>
+  
+
+<td class="col-md-9">0.33</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">3</td>
+    <td class="col-md-2">TSLA</td>
+    
+<td class="col-md-3">2.10</td>
+  
+
+<td class="col-md-4">2.86</td>
+  
+
+<td class="col-md-5">1.64</td>
+  
+
+<td class="col-md-6">1.24</td>
+  
+
+<td class="col-md-7">0.94</td>
+  
+
+<td class="col-md-8">0.80</td>
+  
+
+<td class="col-md-9">1.00</td>
   
 s
 </tr>
