--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
 <td class="col-md-7">1.16</td>
   
 
-<td class="col-md-8">1.55</td>
+<td class="col-md-8">1.70</td>
   
 
-<td class="col-md-9">0.25</td>
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
@@ -74,27 +74,27 @@ s
 
 <tr>
     <td class="col-md-1">2</td>
-    <td class="col-md-2">AMZN</td>
+    <td class="col-md-2">TSLA</td>
     
-<td class="col-md-3">2.22</td>
+<td class="col-md-3">2.09</td>
   
 
-<td class="col-md-4">2.10</td>
+<td class="col-md-4">2.87</td>
   
 
-<td class="col-md-5">1.28</td>
+<td class="col-md-5">1.66</td>
   
 
-<td class="col-md-6">0.99</td>
+<td class="col-md-6">1.17</td>
   
 
-<td class="col-md-7">1.92</td>
+<td class="col-md-7">0.88</td>
   
 
-<td class="col-md-8">1.05</td>
+<td class="col-md-8">0.59</td>
   
 
-<td class="col-md-9">0.25</td>
+<td class="col-md-9">0.50</td>
   
 s
 </tr>
