--- a/index.html
+++ b/index.html
@@ -47,25 +47,54 @@
     <td class="col-md-1">1</td>
     <td class="col-md-2">TSLA</td>
     
-<td class="col-md-3">2.07</td>
+<td class="col-md-3">2.06</td>
   
 
-<td class="col-md-4">2.90</td>
+<td class="col-md-4">2.89</td>
   
 
 <td class="col-md-5">1.56</td>
   
 
-<td class="col-md-6">1.04</td>
+<td class="col-md-6">1.05</td>
   
 
-<td class="col-md-7">0.84</td>
+<td class="col-md-7">0.81</td>
   
 
-<td class="col-md-8">0.76</td>
+<td class="col-md-8">0.74</td>
   
 
-<td class="col-md-9">0.15</td>
+<td class="col-md-9">0.44</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">QQQ</td>
+    
+<td class="col-md-3">2.18</td>
+  
+
+<td class="col-md-4">9.19</td>
+  
+
+<td class="col-md-5">1.03</td>
+  
+
+<td class="col-md-6">0.89</td>
+  
+
+<td class="col-md-7">1.29</td>
+  
+
+<td class="col-md-8">0.55</td>
+  
+
+<td class="col-md-9">1.33</td>
   
 s
 </tr>
