--- a/index.html
+++ b/index.html
@@ -50,22 +50,51 @@
 <td class="col-md-3">2.05</td>
   
 
-<td class="col-md-4">2.87</td>
+<td class="col-md-4">2.88</td>
   
 
 <td class="col-md-5">1.55</td>
   
 
-<td class="col-md-6">0.98</td>
+<td class="col-md-6">1.00</td>
   
 
-<td class="col-md-7">0.79</td>
+<td class="col-md-7">0.78</td>
   
 
-<td class="col-md-8">2.12</td>
+<td class="col-md-8">2.06</td>
   
 
-<td class="col-md-9">1.00</td>
+<td class="col-md-9">1.33</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">SQ</td>
+    
+<td class="col-md-3">1.72</td>
+  
+
+<td class="col-md-4">10.33</td>
+  
+
+<td class="col-md-5">1.32</td>
+  
+
+<td class="col-md-6">1.07</td>
+  
+
+<td class="col-md-7">0.78</td>
+  
+
+<td class="col-md-8">1.00</td>
+  
+
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
