--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">TSLA</td>
+    
+<td class="col-md-3">2.04</td>
+  
+
+<td class="col-md-4">2.91</td>
+  
+
+<td class="col-md-5">1.58</td>
+  
+
+<td class="col-md-6">0.92</td>
+  
+
+<td class="col-md-7">0.68</td>
+  
+
+<td class="col-md-8">1.04</td>
+  
+
+<td class="col-md-9">0.75</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
