--- a/index.html
+++ b/index.html
@@ -50,22 +50,80 @@
 <td class="col-md-3">2.03</td>
   
 
-<td class="col-md-4">3.02</td>
+<td class="col-md-4">3.03</td>
   
 
-<td class="col-md-5">1.57</td>
+<td class="col-md-5">1.59</td>
   
 
-<td class="col-md-6">0.83</td>
+<td class="col-md-6">0.81</td>
   
 
 <td class="col-md-7">0.92</td>
   
 
-<td class="col-md-8">1.95</td>
+<td class="col-md-8">2.30</td>
   
 
-<td class="col-md-9">2.14</td>
+<td class="col-md-9">1.18</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">NBEV</td>
+    
+<td class="col-md-3">1.90</td>
+  
+
+<td class="col-md-4">24.33</td>
+  
+
+<td class="col-md-5">1.21</td>
+  
+
+<td class="col-md-6">0.73</td>
+  
+
+<td class="col-md-7">1.75</td>
+  
+
+<td class="col-md-8">2.25</td>
+  
+
+<td class="col-md-9">0.33</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">3</td>
+    <td class="col-md-2">AMZN</td>
+    
+<td class="col-md-3">2.12</td>
+  
+
+<td class="col-md-4">2.25</td>
+  
+
+<td class="col-md-5">1.03</td>
+  
+
+<td class="col-md-6">1.32</td>
+  
+
+<td class="col-md-7">0.36</td>
+  
+
+<td class="col-md-8">1.50</td>
+  
+
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
