--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">TSLA</td>
+    
+<td class="col-md-3">1.90</td>
+  
+
+<td class="col-md-4">3.20</td>
+  
+
+<td class="col-md-5">1.14</td>
+  
+
+<td class="col-md-6">0.85</td>
+  
+
+<td class="col-md-7">0.94</td>
+  
+
+<td class="col-md-8">0.59</td>
+  
+
+<td class="col-md-9">2.33</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
