--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">TSLA</td>
+    
+<td class="col-md-3">1.90</td>
+  
+
+<td class="col-md-4">3.21</td>
+  
+
+<td class="col-md-5">1.11</td>
+  
+
+<td class="col-md-6">0.84</td>
+  
+
+<td class="col-md-7">0.90</td>
+  
+
+<td class="col-md-8">0.70</td>
+  
+
+<td class="col-md-9">1.50</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
