--- a/index.html
+++ b/index.html
@@ -53,19 +53,48 @@
 <td class="col-md-4">3.20</td>
   
 
-<td class="col-md-5">1.10</td>
+<td class="col-md-5">1.09</td>
   
 
 <td class="col-md-6">0.83</td>
   
 
-<td class="col-md-7">0.82</td>
+<td class="col-md-7">0.79</td>
   
 
-<td class="col-md-8">0.73</td>
+<td class="col-md-8">0.67</td>
   
 
-<td class="col-md-9">0.38</td>
+<td class="col-md-9">0.50</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">MU</td>
+    
+<td class="col-md-3">2.71</td>
+  
+
+<td class="col-md-4">4.67</td>
+  
+
+<td class="col-md-5">1.21</td>
+  
+
+<td class="col-md-6">0.77</td>
+  
+
+<td class="col-md-7">0.00</td>
+  
+
+<td class="col-md-8">0.00</td>
+  
+
+<td class="col-md-9">0.25</td>
   
 s
 </tr>
