--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">TSLA</td>
+    
+<td class="col-md-3">1.89</td>
+  
+
+<td class="col-md-4">3.22</td>
+  
+
+<td class="col-md-5">1.09</td>
+  
+
+<td class="col-md-6">0.87</td>
+  
+
+<td class="col-md-7">0.79</td>
+  
+
+<td class="col-md-8">0.77</td>
+  
+
+<td class="col-md-9">3.00</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
