--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">FB</td>
+    
+<td class="col-md-3">0.89</td>
+  
+
+<td class="col-md-4">2.52</td>
+  
+
+<td class="col-md-5">1.03</td>
+  
+
+<td class="col-md-6">2.70</td>
+  
+
+<td class="col-md-7">0.69</td>
+  
+
+<td class="col-md-8">0.00</td>
+  
+
+<td class="col-md-9">1.00</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
