--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">FB</td>
+    
+<td class="col-md-3">0.88</td>
+  
+
+<td class="col-md-4">2.59</td>
+  
+
+<td class="col-md-5">1.47</td>
+  
+
+<td class="col-md-6">1.75</td>
+  
+
+<td class="col-md-7">1.55</td>
+  
+
+<td class="col-md-8">1.29</td>
+  
+
+<td class="col-md-9">0.33</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
