--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">MU</td>
+    
+<td class="col-md-3">3.09</td>
+  
+
+<td class="col-md-4">6.68</td>
+  
+
+<td class="col-md-5">2.57</td>
+  
+
+<td class="col-md-6">2.00</td>
+  
+
+<td class="col-md-7">2.00</td>
+  
+
+<td class="col-md-8">2.50</td>
+  
+
+<td class="col-md-9">0.67</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
