--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">TWTR</td>
+    
+<td class="col-md-3">0.94</td>
+  
+
+<td class="col-md-4">8.52</td>
+  
+
+<td class="col-md-5">1.19</td>
+  
+
+<td class="col-md-6">1.38</td>
+  
+
+<td class="col-md-7">0.64</td>
+  
+
+<td class="col-md-8">1.60</td>
+  
+
+<td class="col-md-9">0.25</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
