--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">TSLA</td>
+    
+<td class="col-md-3">1.72</td>
+  
+
+<td class="col-md-4">3.48</td>
+  
+
+<td class="col-md-5">1.00</td>
+  
+
+<td class="col-md-6">1.55</td>
+  
+
+<td class="col-md-7">1.54</td>
+  
+
+<td class="col-md-8">2.50</td>
+  
+
+<td class="col-md-9">0.89</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
