--- a/index.html
+++ b/index.html
@@ -50,22 +50,51 @@
 <td class="col-md-3">1.72</td>
   
 
-<td class="col-md-4">3.50</td>
+<td class="col-md-4">3.49</td>
   
 
-<td class="col-md-5">1.00</td>
+<td class="col-md-5">1.01</td>
   
 
-<td class="col-md-6">1.66</td>
+<td class="col-md-6">1.64</td>
   
 
-<td class="col-md-7">1.47</td>
+<td class="col-md-7">1.46</td>
   
 
-<td class="col-md-8">1.47</td>
+<td class="col-md-8">1.38</td>
   
 
-<td class="col-md-9">1.45</td>
+<td class="col-md-9">1.00</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">TWTR</td>
+    
+<td class="col-md-3">0.94</td>
+  
+
+<td class="col-md-4">9.35</td>
+  
+
+<td class="col-md-5">1.22</td>
+  
+
+<td class="col-md-6">1.70</td>
+  
+
+<td class="col-md-7">1.05</td>
+  
+
+<td class="col-md-8">0.40</td>
+  
+
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
