--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@
 <td class="col-md-4">3.62</td>
   
 
-<td class="col-md-5">1.15</td>
+<td class="col-md-5">1.16</td>
   
 
-<td class="col-md-6">1.88</td>
+<td class="col-md-6">1.84</td>
   
 
-<td class="col-md-7">2.09</td>
+<td class="col-md-7">2.14</td>
   
 
-<td class="col-md-8">0.74</td>
+<td class="col-md-8">0.67</td>
   
 
-<td class="col-md-9">0.54</td>
+<td class="col-md-9">0.58</td>
   
 s
 </tr>
@@ -74,27 +74,56 @@ s
 
 <tr>
     <td class="col-md-1">2</td>
-    <td class="col-md-2">TLT</td>
+    <td class="col-md-2">NFLX</td>
     
-<td class="col-md-3">1.47</td>
+<td class="col-md-3">1.99</td>
   
 
-<td class="col-md-4">6.83</td>
+<td class="col-md-4">6.23</td>
   
 
-<td class="col-md-5">2.05</td>
+<td class="col-md-5">1.25</td>
   
 
-<td class="col-md-6">0.55</td>
+<td class="col-md-6">1.81</td>
   
 
-<td class="col-md-7">1.29</td>
+<td class="col-md-7">1.23</td>
   
 
 <td class="col-md-8">0.00</td>
   
 
-<td class="col-md-9">0.33</td>
+<td class="col-md-9">0.67</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">3</td>
+    <td class="col-md-2">TLT</td>
+    
+<td class="col-md-3">1.48</td>
+  
+
+<td class="col-md-4">6.87</td>
+  
+
+<td class="col-md-5">1.96</td>
+  
+
+<td class="col-md-6">0.61</td>
+  
+
+<td class="col-md-7">1.43</td>
+  
+
+<td class="col-md-8">0.00</td>
+  
+
+<td class="col-md-9">0.25</td>
   
 s
 </tr>
