--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <td class="col-md-4">3.68</td>
   
 
-<td class="col-md-5">1.34</td>
+<td class="col-md-5">1.35</td>
   
 
 <td class="col-md-6">1.54</td>
@@ -62,10 +62,39 @@
 <td class="col-md-7">0.59</td>
   
 
-<td class="col-md-8">1.03</td>
+<td class="col-md-8">1.19</td>
   
 
-<td class="col-md-9">0.56</td>
+<td class="col-md-9">1.00</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">TWTR</td>
+    
+<td class="col-md-3">0.94</td>
+  
+
+<td class="col-md-4">9.90</td>
+  
+
+<td class="col-md-5">1.39</td>
+  
+
+<td class="col-md-6">1.13</td>
+  
+
+<td class="col-md-7">0.70</td>
+  
+
+<td class="col-md-8">0.83</td>
+  
+
+<td class="col-md-9">0.67</td>
   
 s
 </tr>
