--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
 <td class="col-md-5">1.53</td>
   
 
-<td class="col-md-6">1.23</td>
+<td class="col-md-6">1.09</td>
   
 
-<td class="col-md-7">0.90</td>
+<td class="col-md-7">1.00</td>
   
 
 <td class="col-md-8">2.00</td>
   
 
-<td class="col-md-9">1.33</td>
+<td class="col-md-9">0.50</td>
   
 s
 </tr>
@@ -85,16 +85,16 @@ s
 <td class="col-md-5">1.36</td>
   
 
-<td class="col-md-6">1.54</td>
+<td class="col-md-6">1.51</td>
   
 
-<td class="col-md-7">0.56</td>
+<td class="col-md-7">0.55</td>
   
 
-<td class="col-md-8">1.18</td>
+<td class="col-md-8">1.09</td>
   
 
-<td class="col-md-9">1.29</td>
+<td class="col-md-9">1.43</td>
   
 s
 </tr>
@@ -103,27 +103,27 @@ s
 
 <tr>
     <td class="col-md-1">3</td>
-    <td class="col-md-2">NBEV</td>
+    <td class="col-md-2">W</td>
     
-<td class="col-md-3">1.25</td>
+<td class="col-md-3">0.93</td>
   
 
-<td class="col-md-4">7.80</td>
+<td class="col-md-4">5.02</td>
   
 
-<td class="col-md-5">1.54</td>
+<td class="col-md-5">1.37</td>
   
 
-<td class="col-md-6">1.45</td>
+<td class="col-md-6">1.53</td>
   
 
-<td class="col-md-7">1.67</td>
+<td class="col-md-7">1.64</td>
   
 
-<td class="col-md-8">0.88</td>
+<td class="col-md-8">1.00</td>
   
 
-<td class="col-md-9">0.33</td>
+<td class="col-md-9">0.50</td>
   
 s
 </tr>
