--- a/index.html
+++ b/index.html
@@ -50,22 +50,51 @@
 <td class="col-md-3">1.67</td>
   
 
-<td class="col-md-4">3.66</td>
+<td class="col-md-4">3.67</td>
   
 
-<td class="col-md-5">1.51</td>
+<td class="col-md-5">1.50</td>
   
 
-<td class="col-md-6">1.09</td>
+<td class="col-md-6">1.06</td>
   
 
-<td class="col-md-7">0.69</td>
+<td class="col-md-7">0.68</td>
   
 
-<td class="col-md-8">0.98</td>
+<td class="col-md-8">1.03</td>
   
 
-<td class="col-md-9">0.40</td>
+<td class="col-md-9">0.56</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">TWTR</td>
+    
+<td class="col-md-3">0.94</td>
+  
+
+<td class="col-md-4">11.14</td>
+  
+
+<td class="col-md-5">1.64</td>
+  
+
+<td class="col-md-6">1.00</td>
+  
+
+<td class="col-md-7">1.47</td>
+  
+
+<td class="col-md-8">0.80</td>
+  
+
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
