--- a/index.html
+++ b/index.html
@@ -50,22 +50,51 @@
 <td class="col-md-3">0.85</td>
   
 
-<td class="col-md-4">2.75</td>
+<td class="col-md-4">2.71</td>
   
 
 <td class="col-md-5">1.51</td>
   
 
-<td class="col-md-6">0.75</td>
+<td class="col-md-6">0.65</td>
   
 
-<td class="col-md-7">0.71</td>
+<td class="col-md-7">0.83</td>
   
 
 <td class="col-md-8">1.67</td>
   
 
 <td class="col-md-9">0.33</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">TSLA</td>
+    
+<td class="col-md-3">1.66</td>
+  
+
+<td class="col-md-4">3.65</td>
+  
+
+<td class="col-md-5">1.51</td>
+  
+
+<td class="col-md-6">0.80</td>
+  
+
+<td class="col-md-7">0.83</td>
+  
+
+<td class="col-md-8">0.70</td>
+  
+
+<td class="col-md-9">2.00</td>
   
 s
 </tr>
