--- a/index.html
+++ b/index.html
@@ -45,27 +45,27 @@
               
 <tr>
     <td class="col-md-1">1</td>
-    <td class="col-md-2">NFLX</td>
+    <td class="col-md-2">W</td>
     
-<td class="col-md-3">1.99</td>
+<td class="col-md-3">0.91</td>
   
 
-<td class="col-md-4">7.82</td>
+<td class="col-md-4">5.39</td>
   
 
-<td class="col-md-5">1.78</td>
+<td class="col-md-5">1.53</td>
   
 
-<td class="col-md-6">1.19</td>
+<td class="col-md-6">1.39</td>
   
 
-<td class="col-md-7">0.94</td>
+<td class="col-md-7">0.68</td>
   
 
-<td class="col-md-8">1.20</td>
+<td class="col-md-8">1.40</td>
   
 
-<td class="col-md-9">0.33</td>
+<td class="col-md-9">0.50</td>
   
 s
 </tr>
@@ -79,22 +79,22 @@ s
 <td class="col-md-3">1.66</td>
   
 
-<td class="col-md-4">3.62</td>
+<td class="col-md-4">3.61</td>
   
 
-<td class="col-md-5">1.52</td>
+<td class="col-md-5">1.53</td>
   
 
 <td class="col-md-6">0.70</td>
   
 
-<td class="col-md-7">0.93</td>
+<td class="col-md-7">0.89</td>
   
 
-<td class="col-md-8">0.72</td>
+<td class="col-md-8">0.83</td>
   
 
-<td class="col-md-9">0.86</td>
+<td class="col-md-9">1.17</td>
   
 s
 </tr>
