--- a/index.html
+++ b/index.html
@@ -65,7 +65,36 @@
 <td class="col-md-8">1.43</td>
   
 
-<td class="col-md-9">0.75</td>
+<td class="col-md-9">0.50</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">TSLA</td>
+    
+<td class="col-md-3">1.65</td>
+  
+
+<td class="col-md-4">3.63</td>
+  
+
+<td class="col-md-5">1.49</td>
+  
+
+<td class="col-md-6">0.64</td>
+  
+
+<td class="col-md-7">0.90</td>
+  
+
+<td class="col-md-8">1.23</td>
+  
+
+<td class="col-md-9">1.25</td>
   
 s
 </tr>
