--- a/index.html
+++ b/index.html
@@ -50,22 +50,51 @@
 <td class="col-md-3">1.81</td>
   
 
-<td class="col-md-4">1.94</td>
+<td class="col-md-4">1.92</td>
   
 
-<td class="col-md-5">1.37</td>
+<td class="col-md-5">1.31</td>
   
 
-<td class="col-md-6">1.12</td>
+<td class="col-md-6">1.17</td>
   
 
 <td class="col-md-7">0.96</td>
   
 
-<td class="col-md-8">1.14</td>
+<td class="col-md-8">1.50</td>
   
 
-<td class="col-md-9">0.60</td>
+<td class="col-md-9">0.40</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">TSLA</td>
+    
+<td class="col-md-3">1.64</td>
+  
+
+<td class="col-md-4">3.66</td>
+  
+
+<td class="col-md-5">1.45</td>
+  
+
+<td class="col-md-6">0.63</td>
+  
+
+<td class="col-md-7">0.88</td>
+  
+
+<td class="col-md-8">0.90</td>
+  
+
+<td class="col-md-9">1.60</td>
   
 s
 </tr>
